--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Small[[:space:]]projects[[:space:]]or[[:space:]]templates(ZIP[[:space:]]BACKUP[[:space:]]FILE)/Complete[[:space:]]website[[:space:]]source[[:space:]]code.zip filter=lfs diff=lfs merge=lfs -text
+Small[[:space:]]projects[[:space:]]or[[:space:]]templates(ZIP[[:space:]]BACKUP[[:space:]]FILE)/*.zip filter=lfs diff=lfs merge=lfs -text
 Small[[:space:]]projects[[:space:]]or[[:space:]]templates(ZIP[[:space:]]BACKUP[[:space:]]FILE)/website[[:space:]]code.zip filter=lfs diff=lfs merge=lfs -text
